this commit is the database and table creation also the addition of info and seelibrary spinner configuration

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,8 @@
 
         <activity
             android:name=".LibraryMapsActivity"
-            android:label="@string/title_activity_library_maps"></activity>
+            android:label="@string/title_activity_library_maps" />
+        <activity android:name=".SeeLibraryInfo"></activity>
     </application>
 
 </manifest>
