commit: Map information addition new info in the database link and mail open respective app some buttons and information addition

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,8 @@
         <activity
             android:name=".LibraryMapsActivity"
             android:label="@string/title_activity_library_maps" />
-        <activity android:name=".SeeLibraryInfo"></activity>
+        <activity android:name=".SeeLibraryInfo" />
+        <activity android:name=".SendMailInterface"></activity>
     </application>
 
 </manifest>
